fix(editor): Used a div instead of a custom element as the editable element to make the editor work on firefox

--- a/src/app/fate-bootstrap/fate-bootstrap.component.scss
+++ b/src/app/fate-bootstrap/fate-bootstrap.component.scss
@@ -36,6 +36,8 @@
   }
 
   fate-input {
-    resize: vertical;
+    /deep/ .fate-edit-target {
+      resize: vertical;
+    }
   }
 }
