--- a/src/app/fate-ui/fate-ui.component.scss
+++ b/src/app/fate-ui/fate-ui.component.scss
@@ -9,6 +9,7 @@ $font-size: 14px;
   padding: 5px;
   background: #FFF;
   color: #333;
+  user-select: none;
 }
 .fate-ui-separator {
   display: inline-block;
